# K3D-jupyter

./: .bowerrc  .gitignore  .travis.yml  Dockerfile  HOW-TO.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  RELEASE.md  Untitled.ipynb  Untitled3.ipynb  Vagrantfile  apt.txt  bower.json  build.cmd  build.sh  docker-compose.yml  environment.yml  index.ipynb  install.json  k3d.json  lab-webpack.config.js  lgtm.yml  package-lock.json  package.json  postBuild  pyproject.toml  readthedocs.yml  requirements.txt  requirements_rtd.txt  setup.py  setupbase.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql.yml  test.yml
binder/: environment.yml  postBuild
docs/: Makefile  make.bat  requirements.txt
docs/source/: basic_plotting.rst  conf.py  contents.rst  index.rst  intro.rst  k3d.colormaps.rst  k3d.rst  modules.rst  plot.py  screenshot.py  snapshot_inline.py
docs/source/_static/: k3d.js  points.html  require_config.js  style.css
docs/source/_templates/: sidebar_index.html
docs/source/api_reference/: index.rst
docs/source/basic_functionality/: Camera.ipynb  Camera.rst  Group.ipynb  Implicit_plot.ipynb  Implicit_plot.rst  Interaction_and_timeseries.ipynb  Interaction_and_timeseries.rst  Line.ipynb  Line.rst  Mesh.ipynb  Mesh.rst  Mesh_callback.ipynb  Platonic_solids.ipynb  Platonic_solids.rst  Points.ipynb  Points.rst  Surface.ipynb  Surface.rst  Text.ipynb  Text.rst  index.rst
docs/source/basic_plotting/: basic_plotting_plot01.py  basic_plotting_plot02.py  empty_plot.py
docs/source/basic_usage/: index.rst  (+1 more)
docs/src/: conf.py
examples/: 01_getting_started.ipynb  02_adding_objects_to_plot.ipynb  03_plotting_a_single_object.ipynb  04_gui_basics.ipynb  05_plot_options.ipynb  Camera_interactive_demo.ipynb  Docs_devel.ipynb  Loading STL from the Web.ipynb  Menger_sponge_clipping_planes.ipynb  Sine_Gordon.ipynb  TorusKnot.ipynb  auto_rendering.ipynb  axesHelper.ipynb  camera_manipulation.ipynb  camera_vectors.ipynb  custom_data.ipynb  force_text_websocket_protocol_COLAB.ipynb  happy_new_year_2020.ipynb  headless.ipynb  hydrogen_orbitals.ipynb  ifs-per-point-opacity.ipynb  include_own_js.ipynb  iris_dataset.ipynb  k3d_test_r2.012.ipynb  k3d_test_r2.014.ipynb  k3d_test_r2.03.ipynb  k3d_test_r2.1.0.ipynb  labels.ipynb  line.ipynb  line_and_sparse_voxels.ipynb  lines.ipynb  lines_colors.ipynb  lines_nbody.ipynb  marching_cubes.ipynb  marching_cubes_non_uniformly_spaced.ipynb  marchingcubes_with_attribute.ipynb  mesh.ipynb  mesh_callback.ipynb  mesh_custom.ipynb  mesh_depth_peels.ipynb  (+50 more)
examples/SageDays74/: Lorenz_system.ipynb  MD_utils.py  Molecular_Dynamics_visualization-demo.ipynb  implicit_plot3d_interactive.ipynb  k3d_test_r1.01.ipynb  line_animation_demo.ipynb  marching_cubes_level_interact.ipynb  surface_interact.ipynb
examples/assets/: stl.stl
examples/old/: k3d_test_r2.1.0.ipynb
js/: .eslintrc.js  .gitignore  .jscsrc  .jshintrc  .prettierrc  .travis.yml  Gruntfile.js  HOW-TO.md  README.md  development.html  development_tf.html  expressTestHelper.js  karma.conf.js  package-lock.json  package.json  webpack.config.dev.js  webpack.config.js
js/src/: amd-public-path.js  deps.js  development.js  embed.js  extension.js  index.js  k3d.css  k3d.js  labplugin.js  lodash.js  standalone.js  transferFunctionEditor.js  version.js
js/test/: configSpec.js  test-main.js
k3d/: __init__.py  _frontend.py  _protocol.py  _version.py  colormaps.py  factory.py  headless.py  helpers.py  k3d.py  k3d_extension.json  objects.py  platonic.py  plot.py  queue.py  transfer_function_editor.py  transform.py  version.py
k3d/colormaps/: basic_color_maps.py  generate_matplotlib_color_maps.py  generate_paraview_color_maps.py  generate_praview_color_maps.py  matplotlib_color_maps.py  paraview_color_maps.py
k3d/colorsmap/: basic_color_maps.py  generate_matplotlib_color_maps.py  generate_praview_color_maps.py  matplotlib_color_maps.py  paraview_color_maps.py
k3d/factory/: __init__.py  common.py  geometry.py  plot.py  points.py  text.py  texture.py  vectors.py  volumetric.py  vtk.py
k3d/objects/: __init__.py  base.py  geometry.py  points.py  text.py  texture.py  utils.py  vectors.py  volumetric.py
k3d/plot/: __init__.py  plot.py  plot_base.py  plot_camera.py  plot_display.py  plot_objects.py  plot_serialization.py  plot_snapshot.py
k3d/test/: conftest.py  log2pngs.py  plot_compare.py  test_colormap.py  test_objects.py  test_queue.py  test_transform.py  test_visual_labels.py  test_visual_line.py  test_visual_lines.py  test_visual_marching_cubes.py  test_visual_mesh.py  test_visual_mip.py  test_visual_points.py  test_visual_stl.py  test_visual_surface.py  test_visual_text.py  test_visual_text2d.py  test_visual_texture.py  test_visual_texture_text.py  test_visual_vector_field.py  test_visual_vector_field_3d.py  test_visual_vectors.py  test_visual_volume.py  test_visual_volume_slice.py  test_visual_voxels.py  test_visual_voxels_group.py
k3d/validation/: stl.py
k3d_widget/: model.js  view.js
lib/: index.js
puppet/: default.pp
(+650 files in other folders)
